Major changes in 3.22.4:
* Fix outstanding performance issue in Year view

Major changes in 3.22.3:
* Only decrease search counter when something is removed (Georges Basile Stavracas Neto)
* Focus entry after calendar selection in quick popover (Mohammed Sadiq)
* Declare 'view' as type guint32 (Yash Singh)
* Fix warning on closing overflow popover (Georges Basile Stavracas Neto)
* Reset edit dialog's event (Georges Basile Stavracas Neto)
* Fix endless timeout issue (Isaque Galdino)
* Updated translations for:
    * Icelandic (Sveinn í Felli)
    * Kazakh (Baurzhan Muftakhidinov)

Major changes in 3.22.2:
* Online calendars are now downloaded offline and synchronized
* Correctly draw the month view on mouse scroll
* A memory leaks was fixed (Victor Toso)
* Updated translations for:
    * Chinese (Cheng Lu)
    * Chinese (Taiwan) (Cheng-Chia Tseng)
    * Italian (Milo Casagrande)
    * Norwegian bokmål (Kjartan Maraas)

Major changes in 3.22.1:
* Ablility to change months/years through mouse and touchpad scroll
* A huge number of bugfixes
* Many memory leaks were fixed (Victor Toso)
* Updated translations for:
    * Arabic (Khaled Hosny)
    * Croatian (gogo)

Major changes in 3.22.0:
* Updated translations for:
    * Basque (Inaki Larranaga Murgoitio)
    * Danish (Alan Mortensen)
    * Greek (Tom Tryfonidis)
    * Russian (Stas Solovey)
    * Ukranian (Daniel Korostil)

Major changes in 3.21.92:
* Fix compiler warning (Dominique Leuenberger)
* Fix various places to work with Gtk+ 3.21.6
* Forbid dragging read-only events
* Updates translations for:
    * British English (David King)
    * Dutch (Hannie Dumoleyn)
    * French (Charles Monzat)
    * Gaelic (Fran Dieguez)
    * Korean (Seong-ho Cho)
    * Latvian (Rūdolfs Mazurs)
    * Lithuanian (Aurimas Černius)
    * Persian (Arash Mousavi)
    * Portuguese (Tiago Santos)
    * Scottish Gaelic (GunChleoc)
    * Swedish (Anders Jonsson)

Major changes in 3.21.91:
* Updated translations for: